--- a/pages/p1/959838.md
+++ b/pages/p1/959838.md
@@ -1,4 +1,4 @@
-### 看守所违法 维权律师致信公安部长赵克志(图)
+### 律师会报道疫情遭重判记者 基督徒也声援(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="面对看守所违法，河北维权律师卢廷阁坚持要监督纠正，近日他已向公安部、最高检察院寄出投诉信、控告信。" src="https://img3.secretchina.com/pic/2020/11-24/p2824711a455886610-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="张展案开庭翌日，张科科律师与张展的母亲邵文侠女士合影。" src="https://img3.secretchina.com/pic/2021/1-21/p2862154a458773076-ss.jpg"/>
   <br>
-   面对看守所违法，河北维权律师卢廷阁坚持要监督纠正，近日他已向公安部、最高检察院寄出投诉信、控告信。（图片来源：维权网）
+   张展案开庭翌日，张科科律师与张展的母亲邵文侠女士合影。
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,50 +29,51 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月24日讯】（看中国记者卢乙欣综合报导）在遭遇法院、法警违法的作为后，河北
-  <strong>
-   维权律师
-   <span href="https://www.secretchina.com/news/gb/tag/卢廷阁" target="_blank">
-    卢廷阁
-   </span>
-  </strong>
-  虽然迄今是
+  【看中国2021年1月21日讯】（看中国记者卢乙欣综合报导）
   <strong>
    维权
   </strong>
-  未果，但仍不轻言放弃。日前，他又遭遇看守所违法行为，导致他无法在侦查阶段会见
+  网17日发布负责公民记者
   <strong>
-   法轮功
+   张展
   </strong>
-  学员。他强调，这是赤裸裸的知法犯法行为，并坚持要监督纠正，持续向公安部、最高检投诉控告。
+  案的张科科律师的通报。张科科13日下午赴看守所，与因报导
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
+   </span>
+  </strong>
+  疫情而遭重判4年的张展进行第五次会见。张展告诉他说不会上诉，并强调，外界的关注无法让当局悔改。因判决生效后，律师不能与当事人会面，因此两人是最后一次会面。另有
+  <strong>
+   基督徒
+  </strong>
+  为张展发起“接力禁食祷告”活动，盼受关注。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
- <p>
-  <strong>
-   看守所知法犯法　卢廷阁坚持控告以监督纠正
-  </strong>
+ <p style="text-align: center;">
+  <img alt="张科科律师13日携带武汉市民写给张展的明信片至看守所。" src="https://img3.secretchina.com/pic/2021/1-21/p2862151a450977487-ss.jpg"/>
+  <br>
+   张科科律师13日携带武汉市民写给张展的明信片至看守所。
+  </br>
  </p>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/维权" target="_blank">
-   维权
+  维权网17日发布负责公民记者
+  <span href="https://www.secretchina.com/news/gb/tag/张展" target="_blank">
+   张展
   </span>
-  网11月23日报导，卢廷阁于11月18日分别向公安部长赵克志、最高检察院检察长张军寄出投诉信、控告信，并称控告上海闵行看守所的郭姓所长。
+  案的张科科律师的文章，张律师在文中表示，他13日下午赴上海市浦东新区看守所会见张展，当时他在浦东看守所的大门外，将武汉市民亲手写的明信片给执勤人员过目，并询问如何交给被关押在看守所中的人。但执勤人员却回复，看守所不收明信片、书，带字的都不收，针对已决的当事人则能通过邮寄方式投递信件。张科科无奈之下，只好先行保管，随后则历经出示随申码（健康码）、领取防疫承诺表格及提交律师会见手续等程式。
  </p>
  <p>
-  卢廷阁表示，看守所受到办案机关闵行公安的指示，在侦查阶段不准许律师会见
-  <span href="https://www.secretchina.com/news/gb/tag/法轮功" target="_blank">
-   法轮功
-  </span>
-  人员，这是赤裸裸的知法犯法行为。
+  在此期间，张科科还巧遇在张展案起诉阶段进行审查的上海辩护律师戴佩清。在与张展会面过程，张科科发现，张展于1月6日的会见中，气色尚可，但这天却是黯淡了一些，略微憔悴，但精神不错。
  </p>
  <p>
-  卢廷阁强调，他曾向驻检控告，但对方却不查办；他向上海市检察院控告，却又被转到了闵行区检察院，而且得要等3个月才会有答复；他向市公安局的投诉，则是石沉大海！
+  提及上诉，张展说，她没有上诉。
  </p>
  <p>
-  面对案件已经到达法院了，卢廷阁认为，虽然黄花菜都凉了，但仍“必须监督纠正！继续向公安部、最高检投诉控告。”
+  由于必须在10日内提出上诉，但当张科科告诉她，必须在1月6日上诉期十天内做决定后，张展拒绝上速，并称，上诉将会导致她与本来的意愿偏离。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -87,7 +88,7 @@
   </div>
  </center>
  <p>
-  在投诉信、控告信中，卢廷阁说明投诉事项为：上海闵行看守所郭所长“以法轮功案件为由，在侦查阶段禁止会见”。
+  张展还说：“不想上诉，不想在封闭的逻辑圈打转。”并强调，上诉除了引发官方紧张、防卫的情绪之外，并没有敲打他们的心。张展认为，“外界的关注不能让他们（官方）悔改。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -102,7 +103,7 @@
   </div>
  </center>
  <p>
-  至于在投诉信、控告信中的“事实和理由”的部分则为：2020年9月29日，卢廷阁持会见材料前往看守所要求会见张南平时，看守所接待人员黄红屏在查看电脑系统后对他说，“办案单位有指示，法轮功案件在侦查阶段不让会见”，并提示卢廷阁得等侦查过后再来，或是找办案单位交涉。
+  其实，看守所在上周律师会见的翌日就找张展谈话，希望她不要上诉。但所方此举，反倒让张展觉得自己不上诉的决定过于草率了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -117,7 +118,7 @@
   </div>
  </center>
  <p>
-  对此，卢廷阁在信中强调，“看守所作为羁押场所，只能依据法律规定安排律师会见，而非按照办案单位的提示”，并表示，除了《刑诉法》第二十九条三款规定的两类案件以外，其它任何案件都是不能够限制律师会见。
+  张展说自己只能吃水果、点心、奶粉冲剂之类的食物，但他不肯吃青菜、肉类、米饭。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -132,7 +133,7 @@
   </div>
  </center>
  <p>
-  卢廷阁在信中批评，那名郭姓所长显然是赤裸裸的违法，剥夺律师会见的权利。这种低级的违法行为跟所谓的现代化都市上海，形成了极具讽刺意味的反差。让人感慨，原来在表面繁荣的底下，“司法还停留在人治”的社会。
+  她说：“只要在看守所一天，无法违背自己的内心如常吃饭。”张展认为，吃饭就表示承认自己是一个被关押在这边的罪犯。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -147,7 +148,7 @@
   </div>
  </center>
  <p>
-  最后，卢廷阁说道，他已亲自向上级主管部门上海市公安局投诉，迄今未获任何答复，所以已无法起到即时纠正的监督作用，因此他如今转向公安部、最高检察院投诉，请两处及时查处上述这些荒诞违法行径。
+  张展告诉张科科，她曾讲对看守所的人员说：“你们的敌人不是我，恐怕是天上看不见的恶魔。”在被关押期间，张展时常趴在看守所的栏杆上面来进行“演讲”，并以“用最大的声音”传递她的态度。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -162,9 +163,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   法院违法让案件蒙受损失　卢廷阁坚持申请赔偿
-  </strong>
+  因张展自2020年5月中旬开始绝食，随后才遭所方强迫灌食、插胃管，外界都担心她的健康状况。看守所人员曾告诉张展，再不好好吃饭，就要使用更粗的胃管。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -179,7 +178,7 @@
   </div>
  </center>
  <p>
-  新唐人今年9月17日报导，卢廷阁在某件代理法轮功学员的案子上，曾因法院违法而面临损失，并向上一级法院申请赔偿。
+  张科科也很担忧，却毫无办法，期待未来有更多的会见，能让她家人稍稍放心。在此期间，戴佩清在会见完自己的当事人后，曾来探望片刻，并隔空劝张展吃饭。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -193,8 +192,11 @@
    </center>
   </div>
  </center>
- <p>
-  2017年11月17日，四川省会理县法院对3名法轮功学员非法开庭，法官还要求卢廷阁、黎雄兵等3名辩护律师必须把电脑、公事包等物件交给法警。由于开庭档及案卷都存放在电脑中，律师自然是不同意交出，法官随后竟宣布取消开庭；2018年10月26日，会理县法院再次非法开庭，并再次阻止卢廷阁、黎雄兵进入法庭。
+ <p style="text-align: center;">
+  <img alt="艾晓明老师亲手写明信片给张展。" src="https://img3.secretchina.com/pic/2021/1-21/p2862152a134213832-ss.jpg"/>
+  <br>
+   中国学者、纪录片工作者艾晓明老师亲手写明信片给张展。
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -213,7 +215,7 @@
   </ins>
  </center>
  <p>
-  针对法庭的违法作为，卢廷阁表示：“一共5次吧，我们作为辩护人出庭，限制我们带包和电脑，不让带进去，我们没法出庭，我们就提起国家赔偿，要求法院给我们赔偿相关的损失，主要是差旅费，还有误工这方面损失，这5次，我们都提起赔偿了，会理法院完全都不予受理，我们又向凉山州中级法院要求赔偿。”
+  张科科也念武汉市民写的明信片给张展听，当张展听到中国学者、纪录片工作者艾晓明老师的明信片说道：“张展你好！我们爱你。感谢你来到武汉，惭愧没有帮助你，为你受的苦而心痛。愿你保重身体，期待早日相聚！”不禁眼泪盈眶。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -228,7 +230,7 @@
   </div>
  </center>
  <p>
-  只是，卢廷阁后来收到了凉山州中院不受理国赔申请的这项结果，但他表示，自己不会对这结果感到意外，“现在我们收到的这个决定书是凉山州中院关于第2次限制我们出庭的赔偿决定，还是说不予受理。”
+  张展表示：“希望出来以后可以和武汉的朋友们再次乘船、渡江，一起去街上拍照片”、“在武汉是一段珍贵回忆，希望重温在武汉和朋友们的美好时光。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,7 +245,7 @@
   </div>
  </center>
  <p>
-  卢廷阁说自己不会放弃，并强调：“这完全是司法机关，包括法院，不受法律监督，然后肆意妄为，这是一个明显的体现，就官官相护吧，上级法院也不会最后判定下级法院给我们赔偿，这个我们也能预料到，但是我们还是要继续向上一级法院申请赔偿，因为这是法院直接的违法导致的直接的损失，所以说它应当赔偿。”
+  此次会见，张展告诉张科科律师，不能接收圣经，除非是小说之类的读物。她还说：“以后的路会比较难走。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,71 +260,56 @@
   </div>
  </center>
  <p>
-  2017年11月17日，当法官宣布取消开庭后，卢廷阁下楼时，竟被一名法警抢走手机，并遭到殴打致伤。卢廷阁一度处于昏迷状态。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  对此，卢廷阁认为，该名法警应该以故意杀人未遂立案侦查。不过，当卢廷阁报案后，却被当成是普通的治安案件来处理，并匆匆结案。2019年10月，卢廷阁提起刑事自诉，结果却不被受理，11月上诉也遭到驳回。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  对此，2020年7月8号，卢廷阁转而向凉山州中院申诉，但中院却拒绝立案。不过，卢廷阁仍是坚持维权，9月8号，他继续转往四川省检察院申诉，要求其依法抗诉。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
+  此外，有
+  <span href="https://www.secretchina.com/news/gb/tag/基督徒" target="_blank">
+   基督徒
   </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+  为张展发起“接力禁食祷告，陪张展姊妹行苦路——给基督徒朋友的倡议”，此活动为一场接力禁食祷告，参与者须一周禁食一餐，在禁食期间为张展祷告。此活动自2021年1月4日开始。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  与张展同样身为基督徒的《人道中国》理事、人权活动人士王剑虹在推特上除持续声援张展、呼吁外界关注张展案之外，还留言呼吁网友将张科科与张展的会见通报转发至墙内，让更多人知晓张展案及其进展。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  另外，中国境内的基督徒正面临着越来越严重的打压、迫害。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  推特网友“大兔子回来了”1月14日发布推文称，湖南衡阳陈文胜牧师在2020至2021年期间，因被冠上‘非法传道’罪名，导致半年内遭到接连行政治安拘留3次。该推友强调，“中国家庭基督教会生存状况堪忧，面临严重的打压！求扩散关注。”
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -335,6 +322,43 @@
     </center>
    </div>
   </center>
+  <p>
+   来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41hG"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -352,13 +376,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953595.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953595.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953595.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/24/953595.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/959838.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/959838.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/959838.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/21/959838.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/953595.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/959838.md' width='0px' height='0px'/>
