--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -116664,4 +116664,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01212201)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01212251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
