--- a/pages/p4/959864.md
+++ b/pages/p4/959864.md
@@ -1,4 +1,4 @@
-### 美主媒疯狂封杀真相 营造拜登“当选”假象(视频)
+### 真真假假？解密油管大V打着川爷旗号干着最五毛的事(视频)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -9,42 +9,48 @@
  <div id="story_video" style="text-align: center;margin-top: 20px;">
  </div>
  <p>
-  和我们一起守护美国、守护香港、守护14亿中国人，获得真实资讯的权利！
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
-   </span>
+  大家好我是
+  <span href="https://www.secretchina.com/news/gb/tag/熊猫侠" target="_blank">
+   熊猫侠
   </span>
- </p>
- <div id="txt-mid1-t21-2017">
-  
-
----
-
-#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
-
-
-  </div>
- </div>
- <p>
-  荣誉会员招募中：
-  <span href="https://www.secretchina.com/kzgd/subscribe.html">
-   https://www.secretchina.com/kzgd/subscribe.html
-  </span>
+  Panda Man🐼
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  《看中国》作为一家不受中共审查的海外独立中文媒体，已经在全球各地义工的支持下走过了风风雨雨近二十年。2019年，由于《看中国》坚持一线独立报道
-  <span href="https://www.secretchina.com/news/gb/tag/反送中" target="_blank">
-   反送中
+  喜欢我的频道，欢迎点赞，订阅，评论开启小铃铛🔔第一时间观看精彩内容哦〜
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
+   </span>
   </span>
-  运动，我们在Facebook上可赚取广告费用的新闻帐户被强行关闭甚至注销；由于我们坚持报道台湾民主选举及中共病毒疫情真相，我们在Youtube上的频道被黄标，收入甚微。但为报导真实资讯，《看中国》义无反顾！
+ </p>
+ <p>
+  <strong>
+   ●《熊猫侠》订阅频道
+  </strong>
+  <br>
+   <span href="https://www.youtube.com/channel/UCkCfjd8aOsJHdpgj6FD9L1w">
+    https://www.youtube.com/channel/UCkCfjd8aOsJHdpgj6FD9L1w
+   </span>
+  </br>
  </p>
  (文章仅代表作者个人立场和观点)
+ <p>
+  来源:
+  <span href="/news/gb/tag/熊猫侠  ">
+   熊猫侠
+  </span>
+ </p>
+ <p>
+  本文短网址:
+  <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41hg"/>
+  版权所有，任何形式转载需看中国授权许可。
+  <span style="color:red">
+   严禁建立镜像网站.
+  </span>
+ </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -66,30 +72,30 @@
     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
-  <center>
-   <div>
-    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
-     <div id="SC-21xx">
-     </div>
-     <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
-     </ins>
-    </div>
-   </div>
-  </center>
-  <div style="padding-top:12px;">
-  </div>
  </p>
+ <center>
+  <div>
+   <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
+    <div id="SC-21xx">
+    </div>
+    <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
+    </ins>
+   </div>
+  </div>
+ </center>
+ <div style="padding-top:12px;">
+ </div>
 </div>
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/953850.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/953850.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/953850.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/26/953850.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/959864.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/959864.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/959864.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/21/959864.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/953850.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/959864.md' width='0px' height='0px'/>
