--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -116679,4 +116679,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01220051)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01220101)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
