--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -116688,4 +116688,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01220201)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01220251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
