--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -116817,4 +116817,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01222351)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01230001)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
