--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -116823,4 +116823,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01230051)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01230101)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
