--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -116967,4 +116967,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01240051)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01240101)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
