--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -116970,4 +116970,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01240101)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01240151)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
