--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -116997,4 +116997,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01240551)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01240601)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
